# spool

./: .gitignore  Cargo.toml  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20260001_0000001_create_users.rs  m20260001_0000002_create_keys.rs  m20260001_0000003_create_files.rs
src/: auth.rs  etc.rs  main.rs  upload.rs  words.txt
src/entities/: files.rs  mod.rs  nodes.rs  prelude.rs  u_settings.rs  users.rs
